--- a/newthing.html
+++ b/newthing.html
@@ -1,11 +1,15 @@
 <html>
     <body>
+        <p class="myText"></p>
         <script>
             const abcd = new XMLHttpRequest();
+            let Treader = document.querySelector('.myText');
 
             abcd.onload = function(){
                 const muhu = this.responseText
                 console.log(muhu)
+                Treader.innerHTML = muhu;
+
             }
 
             abcd.open('GET','hello.txt',true)
